--- a/css/classStyles.css
+++ b/css/classStyles.css
@@ -19,6 +19,15 @@
     height: 50px;
     margin-bottom: 10px;
 }
+.resetJ{
+    border: 2px solid #b51c49;
+    background-color: black;
+    color: gray;
+    margin-top: 10px;
+    width: 300px;
+    height: 90px;
+    margin-right: 10px;
+}
 .slowdown{
     border: 2px solid darkgreen;
     background-color: black;
